@@ -1,5 +1,6 @@
 <& '/widgets/search/search.mc',
   object       => 'media',
+  state_key    => 'rel_media',
   type         => 'media',
   field        => 'title',
   use_form_tag => 0 &>
@@ -8,10 +9,11 @@
 <& '/widgets/wrappers/sharky/table_top.mc', caption => 'Choose Related Media' &>
 <& /widgets/listManager/listManager.mc,
    object   => 'media',
+   state_key => 'rel_media',
    sortBy   => 'name',
    select   => undef,
    profile  => $related_profile,
-   constrain => { uri => '/%' }, # Must have a file associated.
+   constrain => ($args->{'search|uri'} ? {} : { uri => '/%' }), # Must have a file associated.
    featured => $relate_id ? [$relate_id] : undef,
    exclude  => $excl_sub,
    fields   => [(USE_THUMBNAILS ? 'thumb' : ()), qw(id name uri cover_date)],
@@ -33,6 +35,7 @@
 
 <%args>
 $widget
+$args
 </%args>
 <%init>;
 # The element object.
